# fo3-wallet-core

./: .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.production  LICENSE  LOCAL_VALIDATION_README.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE4_IMPLEMENTATION_GUIDE.md  PHASE_3_PRODUCTION_DEPLOYMENT_SUMMARY.md  PHASE_5B_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS_FINAL.md  README.md  README_ENHANCED.md  REAL_DATABASE_VALIDATION.md  deploy.sh  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  init.sql  run_phase4_implementation.sh  setup_phase4_production.sh  setup_postgres.sh  test_phase2_implementation.sh  test_phase3_integration.sh  validate_phase4_sql.sh
config/: development.toml  production.toml  prometheus.yml
docs/: API_REFERENCE.md  CARD_FUNDING_SERVICE_IMPLEMENTATION.md  CARD_SERVICE_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  FIAT_GATEWAY_IMPLEMENTATION.md  KYC_IMPLEMENTATION.md  LEDGER_SERVICE_IMPLEMENTATION.md  MOBILE_INTEGRATION.md  NOTIFICATION_SERVICE_IMPLEMENTATION.md  PHASE2D_COMPLETION_REPORT.md  PRICING_SERVICE_IMPLEMENTATION.md  REFERRAL_SERVICE_IMPLEMENTATION_STATUS.md  REWARDS_SERVICE_IMPLEMENTATION_COMPLETE.md  SPENDING_INSIGHTS_SERVICE_IMPLEMENTATION.md  referral-service.md
examples/: Cargo.toml  build.rs  grpc_client.rs
fo3-wallet/: Cargo.toml
fo3-wallet-api/: CONCRETE_VALIDATION_EVIDENCE.md  Cargo.toml  PHASE_4_IMPLEMENTATION_SUMMARY.md  build.rs
fo3-wallet-api/docs/: PHASE_4_PERFORMANCE_OPTIMIZATION.md  dappsigningservice_api.md  earnservice_api.md  phase2d_api_documentation.md  walletconnectservice_api.md
fo3-wallet-api/migrations/: 001_initial_schema.sql  002_kyc_schema.sql  003_fiat_gateway_schema.sql  004_cards_schema.sql  005_trading_defi_schema.sql
fo3-wallet-api/scripts/: generate_api_docs.py  run_phase2d_tests.sh  run_validation_demos.sh  validate_phase4_performance.sh
fo3-wallet-api/src/: error.rs  main.rs  nft.rs  orca.rs  raydium.rs  solana.rs  state.rs
fo3-wallet-api/src/cache/: cache_manager.rs  invalidation.rs  load_testing.rs  memory_cache.rs  metrics.rs  mod.rs  redis_cache.rs
fo3-wallet-api/src/database/: connection.rs  initializer.rs  mod.rs  performance.rs  seed_data.rs
fo3-wallet-api/src/database/repositories/: card_repository.rs  fiat_repository.rs  kyc_repository.rs  mod.rs  production_wallet_repository.rs  wallet_repository.rs
fo3-wallet-api/src/middleware/: audit.rs  auth.rs  card_funding_guard.rs  card_guard.rs  dapp_guard.rs  earn_guard.rs  fiat_guard.rs  kyc_guard.rs  ledger_guard.rs  mod.rs  moonshot_guard.rs  pricing_guard.rs  rate_limit.rs  referral_guard.rs  rewards_guard.rs  spending_guard.rs  trading_guard.rs  wallet_connect_guard.rs
fo3-wallet-api/src/ml/: data_pipeline.rs  feature_engineering.rs  market_predictor.rs  mod.rs  model_manager.rs  risk_assessor.rs  sentiment_analyzer.rs  trading_signals.rs  yield_predictor.rs
fo3-wallet-api/src/models/: card_funding.rs  card_funding_impl.rs  cards.rs  dapp_signing.rs  earn.rs  fiat_gateway.rs  kyc.rs  ledger.rs  ledger_impl.rs  ledger_impl_remaining.rs  ledger_repository.rs  mod.rs  moonshot.rs  notifications.rs  pii_protection.rs  pricing.rs  referral.rs  referral_impl.rs  rewards.rs  rewards_impl.rs  spending_insights.rs  user_context.rs  wallet_connect.rs
fo3-wallet-api/src/observability/: mod.rs
fo3-wallet-api/src/services/: auth.rs  automated_trading.rs  card_funding.rs  card_funding_admin.rs  card_funding_crypto.rs  card_funding_methods.rs  card_funding_test.rs  cards.rs  dapp_browser.rs  dapp_signing.rs  defi.rs  earn.rs  events.rs  fiat_gateway.rs  health.rs  kyc.rs  ledger.rs  ledger_admin.rs  ledger_journal.rs  ledger_methods.rs  ledger_reporting.rs  ledger_test.rs  market_intelligence.rs  mod.rs  moonshot.rs  notifications.rs  payment_providers.rs  pricing.rs  referral.rs  referral_methods.rs  referral_test.rs  rewards.rs  rewards_methods.rs  rewards_test.rs  solana.rs  spending_insights.rs  transaction.rs  wallet.rs  wallet_connect.rs
fo3-wallet-api/src/services/integration/: event_dispatcher.rs  health_monitor.rs  mod.rs  service_coordinator.rs  transaction_manager.rs
fo3-wallet-api/src/storage/: documents.rs  mod.rs
fo3-wallet-api/src/tls/: mod.rs
fo3-wallet-api/src/websocket/: mod.rs  server.rs
fo3-wallet-api/tests/: cache_performance_test.rs  card_funding_test.rs  e2e_test_framework.rs  integration_test_runner.rs  ledger_test.rs  performance_validation.rs  phase_3_integration_tests.rs  phase_5b_integration_test.rs  security_validation.rs  service_registration_validation.rs
fo3-wallet-solana/: Cargo.toml  README.md
fo3-wallet-solana/docs/: nft.md  orca.md  raydium.md
fo3-wallet-solana/examples/: basic_usage.rs  staking.rs
fo3-wallet-solana/src/: lib.rs  nft.rs  nft_test.rs  orca.rs  orca_test.rs  raydium.rs  raydium_test.rs
fo3-wallet/src/: error.rs  lib.rs
fo3-wallet/src/account/: mod.rs  wallet.rs
fo3-wallet/src/crypto/: mnemonic.rs  mod.rs
fo3-wallet/src/crypto/keys/: bitcoin.rs  derivation.rs  ethereum.rs  mod.rs  solana.rs
fo3-wallet/src/defi/: aave.rs  ethereum.rs  lending.rs  lido.rs  mod.rs  provider.rs  staking.rs  swap.rs  types.rs
fo3-wallet/src/transaction/: bitcoin.rs  ethereum.rs  mod.rs  provider.rs  solana.rs  types.rs
fo3-wallet/tests/: defi.rs  key_derivation.rs  transaction.rs
k8s/: configmap.yaml  fo3-wallet-core.yaml  grafana.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  rbac.yaml  redis.yaml  secrets.yaml  security.yaml
proto/: auth.proto  automated_trading.proto  card_funding.proto  cards.proto  dapp_browser.proto  dapp_signing.proto  defi.proto  earn.proto  events.proto  fiat_gateway.proto  health.proto  kyc.proto  ledger.proto  market_intelligence.proto  moonshot.proto  notifications.proto  pricing.proto  referral.proto  rewards.proto  solana.proto  spending_insights.proto  transaction.proto  wallet.proto  wallet_connect.proto
scripts/: deploy-production.sh  entrypoint.sh  (+9 more)
src/: error.rs  (+2 more)
(+50 files in other folders)
