[workspace]
members = [
    "fo3-wallet",
    "fo3-wallet-api",
    # Legacy projects (archived)
    # "legacy/wallet-core",
    # "legacy/wallet-api",
    # "legacy/test-project",
    # "legacy/minimal-cargo",
    # "legacy/test-deps",
    # "legacy/minimal-wallet-core",
    # "legacy/minimal-wallet-api",
    # "legacy/new-wallet-core",
]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Cryptography and blockchain
bip39 = "2.0"
ethers = { version = "2.0", features = ["legacy"] }
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-core = "2.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bitcoin = "0.31"
base58 = "0.2"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.5"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
