[workspace]
members = [
    "fo3-wallet",
    "fo3-wallet-api", "fo3-wallet-solana",
    # Legacy projects (archived)
    # "legacy/wallet-core",
    # "legacy/wallet-api",
    # "legacy/test-project",
    # "legacy/minimal-cargo",
    # "legacy/test-deps",
    # "legacy/minimal-wallet-core",
    # "legacy/minimal-wallet-api",
    # "legacy/new-wallet-core",
]
resolver = "2"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "c14774464c4d38de553c6ef2f48a10982c1b4801" }
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.21", features = ["full"] }

# Cryptography and blockchain
bip39 = "2.0"
ethers = { version = "2.0", features = ["legacy"] }
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-core = "2.0"

# Specific versions to resolve dependency conflicts
# curve25519-dalek = "=3.2.1"
# ed25519-dalek = "=1.0.1"
# zeroize = "1.5.7"

# Bitcoin dependencies
bitcoin = "0.31"
bitcoin-wallet = "1.1.0"
bitcoin-bech32 = "0.13"
bitcoin-internals = "0.2"
base58 = "0.2"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.5"

# Web server
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
