[workspace]
members = [
    "fo3-wallet",
    "fo3-wallet-api", "fo3-wallet-solana",
    # Legacy projects (archived)
    # "legacy/wallet-core",
    # "legacy/wallet-api",
    # "legacy/test-project",
    # "legacy/minimal-cargo",
    # "legacy/test-deps",
    # "legacy/minimal-wallet-core",
    # "legacy/minimal-wallet-api",
    # "legacy/new-wallet-core",
]
resolver = "2"

# [patch.crates-io]
# curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
# zeroize = { version = "1.3" }

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.21", features = ["full"] }

# Cryptography and blockchain
bip39 = "2.0"
ethers = { version = "2.0", features = ["legacy"] }
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-core = "2.0"

# Solana dependencies
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-transaction-status = "1.16.0"
solana-program = "1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"

# Bitcoin dependencies
bitcoin = "0.31"
bitcoin-wallet = "1.1.0"
bitcoin-bech32 = "0.13"
bitcoin-internals = "0.2"
base58 = "0.2"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.5"

# Web server
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }

# gRPC
tonic = "0.10"
tonic-build = "0.10"
tonic-web = "0.10"
prost = "0.12"
prost-types = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"

# Authentication and security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# WebSocket support
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio-stream = "0.1"

# Observability and tracing
opentelemetry = "0.21"
opentelemetry-sdk = "0.21"
opentelemetry-jaeger = "0.20"
tracing-opentelemetry = "0.22"
prometheus = "0.13"

# TLS and certificates
openssl = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
