[package]
name = "fo3-wallet-solana"
version = "0.1.0"
edition = "2021"
description = "Solana implementation for FO3 Wallet Core"
authors = ["FO3 Team"]
license = "MIT"

[dependencies]
# Internal dependencies
fo3-wallet = { path = "../fo3-wallet" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Solana dependencies
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-transaction-status = "1.16.0"
solana-program = "1.16.0"

# Encoding
bs58 = "0.5"
hex = "0.4"
