[package]
name = "fo3-wallet-solana"
version = "0.1.0"
edition = "2021"
description = "Solana implementation for FO3 Wallet Core"
authors = ["FO3 Team"]
license = "MIT"

[dependencies]
# Internal dependencies
fo3-wallet = { path = "../fo3-wallet" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Solana dependencies
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-transaction-status = "1.16.0"
solana-program = "1.16.0"

# Encoding
bs58 = "0.5"
hex = "0.4"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "c14774464c4d38de553c6ef2f48a10982c1b4801" }
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
