[package]
name = "fo3-wallet-solana"
version = "0.1.0"
edition = "2021"
description = "Solana implementation for FO3 Wallet Core"
authors = ["FO3 Team"]
license = "MIT"

[dependencies]
# Internal dependencies
fo3-wallet = { path = "../fo3-wallet" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

# Encoding
bs58 = { workspace = true }
hex = { workspace = true }
