[package]
name = "fo3-wallet"
version = "0.1.0"
edition = "2021"
description = "FO3 Wallet Core - Multi-chain wallet and DeFi SDK"
authors = ["FO3 Team"]
license = "MIT"

[features]
default = ["ethereum", "bitcoin"]
ethereum = []
bitcoin = []
solana = ["fo3-wallet-solana"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography and blockchain
bip39 = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = "2.1"
bs58 = { workspace = true }
base58 = { workspace = true }
bitcoin = { workspace = true }
bitcoin-wallet = { workspace = true }
bitcoin-bech32 = { workspace = true }
bitcoin-internals = { workspace = true }

# Ethereum
ethers = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
ethers-core = { workspace = true }
k256 = "0.13"

# Solana dependencies
fo3-wallet-solana = { path = "../fo3-wallet-solana", optional = true }

# Specific versions to resolve dependency conflicts
# curve25519-dalek = { workspace = true }
# zeroize = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Random number generation
rand = { workspace = true }

# Async runtime
tokio = { workspace = true }
